sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#maxspeed__false22/errors.jtrrouter
Error: Attribute 'maxspeed' in definition of lane '2_1' is not a real number.
Quitting (on error).
